# opentpod-tools

./: .gitignore  .pre-commit-config.yaml  README.md  README.rst  config  poetry.lock.license  pyproject.toml
.reuse/: dep5
datumaro/: version.py
opentpod_tools/: __init__.py  classification.py  download.py  filter.py  google_automl_class.py  google_automl_class_train.py  google_automl_od.py  google_automl_od_train.py  google_cloud_helper.py  merge.py  pytorch_class_result.py  pytorch_classification.py  pytorch_mobilenet.py  pytorch_resnet.py  removedup.py  tfod_training.py  unique.py  utils.py
opentpod_tools/tfod/: __init__.py  base.py  freezer.py  infer.py  requirements-infer.txt  tfod_faster_rcnn.py  tfod_ssd.py  utils.py
opentpod_tools/tfod/wrappers/: export_inference_graph.py  export_saved_model.py
tests/: test_opentpod_tools.py  test_tpod_tools.py
tpod_tools/: download.py
