# SPDX-FileCopyrightText: 2020 Carnegie Mellon University
#
# SPDX-License-Identifier: Apache-2.0

[tool.poetry]
name = "opentpod-tools"
version = "0.1.0"
description = "Command line tools integrating OpenTPOD functionality."
authors = [
    "Jan Harkes <jaharkes@cs.cmu.edu>",
    "Junjue Wang <junjuew@cs.cmu.edu>"
]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/cmusatyalab/opentpod-tools/"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]
packages = [
    { include = "opentpod_tools" },
    { include = "datumaro" },
]

[tool.poetry.dependencies]
python = ">=3.6.2,<3.8"
ConfigArgParse = "^1.2.3"
imagehash = "^4.1.0"
logzero = "^1.6.2"
requests = "^2.24.0"
tqdm = "^4.50.2"
tensorflow-gpu = "~1.15.4"
tf-object-detection = { extras = ["tf-gpu"], version = "^0.0.3" }
torch = "^1.7.0"
torchvision = "^0.8.1"

# datumaro = { extras = ["tf-gpu"], git = "https://github.com/openvinotoolkit/datumaro.git", rev = "v0.1.3" }
# datumaro dependencies
attrs = ">=19.3.0"
defusedxml = ">=0.6.0"
GitPython = ">=3.0.8"
lxml = ">=4.4.1"
matplotlib = ">=3.3.1"
numpy = ">=1.17.3"
opencv-python-headless = ">=4.1.0.25"
Pillow = ">=6.2.2"
pycocotools = ">=2.0.0"
PyYAML = ">=5.3.1"
scikit-image = ">=0.15.0"
tensorboardX = ">=1.8"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.6.4"
pylint = "^2.6.0"
pytest = "^5.2"

# datumaro dependency
Cython = ">=0.27.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tpod-download = "opentpod_tools.download:main"
tpod-merge = "opentpod_tools.merge:main"
tpod-unique = "opentpod_tools.removedup:main"
tpod-class = "opentpod_tools.classification:main"
tpod-google-automl-od = "opentpod_tools.google_automl_od:main"
tpod-pytorch-class = "opentpod_tools.pytorch_classification:main"
tpod-pytorch-class-test = "opentpod_tools.pytorch_class_result:main"
tpod-tfod-training = "opentpod_tools.tfod_training:main"
tpod-tfod-freeze = "opentpod_tools.tfod.freezer:main"

# datumaro
datum = "datumaro.cli.__main__:main"

[tool.poetry.urls]
issues = "https://github.com/cmusatyalab/opentpod-tools/issues"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
