# SPDX-FileCopyrightText: 2020 Carnegie Mellon University
#
# SPDX-License-Identifier: Apache-2.0

[tool.poetry]
name = "opentpod-tools"
version = "0.1.0"
description = "Command line tools integrating OpenTPOD functionality."
authors = [
    "Jan Harkes <jaharkes@cs.cmu.edu>",
    "Junjue Wang <junjuew@cs.cmu.edu>"
]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/cmusatyalab/opentpod-tools/"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]
packages = [
    { include = "opentpod_tools" },
]

[tool.poetry.dependencies]
python = "^3.8"
ConfigArgParse = "^1.2.3"
datumaro = { version = "^1.5.2", extras = ["default"] }
imagehash = "^4.3.1"
logzero = "^1.6.2"
requests = "^2.24.0"
tqdm = "^4.66.2"

ultralytics = { version = "^8.0.0", optional = true }

#tensorflow-gpu = "~1.15.4"
#tf-object-detection = { version = "^0.0.3", extras = ["tf-gpu"] }
#torch = "^1.7.0"
#torchvision = "^0.8.1"
# indirect dependency cuda-python-12.4.0 was released with
# no wheels for python 3.8
#cuda-python = { version = "<12.4.0", python = "<3.9" }

[tool.poetry.extras]
yolo = ["ultralytics"]

[tool.poetry.group.dev.dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.6.4"
pylint = "^2.6.0"
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tpod-download = "opentpod_tools.download:main"
tpod-filter = "opentpod_tools.filter:main"
tpod-unique = "opentpod_tools.unique:main"

#tpod-class = "opentpod_tools.classification:main"
#tpod-google-automl-od = "opentpod_tools.google_automl_od:main"
#tpod-pytorch-class = "opentpod_tools.pytorch_classification:main"
#tpod-pytorch-class-test = "opentpod_tools.pytorch_class_result:main"
#tpod-tfod-training = "opentpod_tools.tfod_training:main"
#tpod-tfod-freeze = "opentpod_tools.tfod.freezer:main"

[tool.poetry.urls]
issues = "https://github.com/cmusatyalab/opentpod-tools/issues"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
